--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
+    "chart.js": "^3.9.1",
     "craco": "^0.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.8.4"
   },
