--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "@craco/craco": "^7.0.0-alpha.9",
     "@reduxjs/toolkit": "^1.8.6",
+    "@tanstack/react-query": "^4.16.1",
+    "@trpc/client": "^10.0.0-rc.8",
+    "@trpc/react-query": "^10.0.0-rc.8",
+    "@trpc/server": "^10.0.0-rc.8",
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
